@@ -166,32 +166,11 @@ while ( $row =mysql_fetch_array( $result ) )
 include(PHPWG_ROOT_PATH.'include/user.inc.php');
 
 // language files
-$user_langdir = PHPWG_ROOT_PATH.'language/'.$user['language'];
-$conf_langdir = PHPWG_ROOT_PATH.'language/'.$conf['default_language'];
+include_once(get_language_filepath('common.lang.php'));
 
-if (file_exists($user_langdir.'/common.lang.php'))
-{
-  include_once($user_langdir.'/common.lang.php');
-}
-else
-{
-  include_once($conf_langdir.'/common.lang.php');
-}
-
-// The administration section requires 2 more language files
 if (defined('IN_ADMIN') and IN_ADMIN)
 {
-  foreach (array('admin') as $section)
-  {
-    if (file_exists($user_langdir.'/'.$section.'.lang.php'))
-    {
-      include_once($user_langdir.'/'.$section.'.lang.php');
-    }
-    else
-    {
-      include_once($conf_langdir.'/'.$section.'.lang.php');
-    }
-  }
+  include_once(get_language_filepath('admin.lang.php'));
 }
 
 // only now we can set the localized username of the guest user (and not in
